# rct-vita

./: CMakeLists.txt  README.md
livearea/: template.xml
loader/: config.h  main.c  main.h  pthr.c
